# efinance-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  INSTALL.md  LICENSE  Makefile  README.md  README_CN.md  pyproject.toml  test_cli.py  test_simple.py  update_github_links.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
skills/filter-fund-by-name/: SKILL.md
skills/query-fund-purchase-limit/: SKILL.md
src/efinance_cli/: __init__.py  bond.py  fund.py  futures.py  install_skills.py  main.py  stock.py
